@@ -3,6 +3,6 @@ AUX adchpp-lan-2.9.0-fix_cflags.patch 2402 SHA256 c0b8b3c47fd2cc64b56f0b6c1c4e48
 AUX adchpp-lan.conf.d 408 SHA256 b1988c06279014462391d27c3ab6e6ca07e7204f54544160e949808d60b78e3a SHA512 c14fa6b3cd9c64610a8fb5057c98126f38401b18239d78268a4c7e9c6e74fa33ed7a7feb19fbb9f1b1e9b84b31c01d30d1cfce8a9b22dc0b5fe6182a284fbacc WHIRLPOOL 9f8489265e6fa039f038ec5a1c89c935dfab50870ef2d586b464ea6b70b21fa810f2052cf43dba9e10e5272d3ba8b3dc1f4a18ac747fb77a7c1facbaf6dd3ed0
 AUX adchpp-lan.init.d 568 SHA256 37a7ee707036e17c7990cd418d1173464fe97960a6be21f5bed5c1b09280d7d2 SHA512 38c809e58da0e9ca51f135c34f80fa9a376c025253e07fd59dd7d9d4fb816907fa21013b5217ee00dabd3e21e4af8c8b865e3d0b56828db454b26e4e4893d7c0 WHIRLPOOL 6b592940bd70058fe0226a09cbbc4bb9bfad68911f9723f92365cdb11e332aa24683b392d057168e0a08f5b79c7bc4bac8fdd1ae485a6a523a45da2970b3e94e
 AUX adchpp_runner.sh 185 SHA256 3fc062bea86aa313c20315a293c0164bf52fe272c0e46d0e2753cc29b5ca89cb SHA512 60eb17ed3c3d2244bbdf77e00a413a97da82cb2045e0761c7e86951ce31b7e8de7d3470fd420a0f2b09f0f0f46ab1125f49a1f289bc8cfcf49a7436fb79f1e3c WHIRLPOOL 04b60a57145ac8a8bb835a7bd2b23293fa913c78dbdcb93c070b8590188ee930a1cc4a8fe766cba21c50d42d680db359e0d4a051dd1ac7c9b84466b3db7c2503
-EBUILD adchpp-lan-9999.ebuild 4258 SHA256 8b56d3455dc3d987795a8bc403825a1c919d57e49e8ccb72d0c03d0b5ff20f64 SHA512 11d7a27767b910462befd55ff80b29a824fac3d1d768a1bfa16233b8f7fd2f996823d32940ca5e86f625ef347043f16895bd14f8918f836c38db57fbdb770aad WHIRLPOOL 57715cec8dcf76853868c66528f6f328d76887d3fa0260a231bd7c91ba5f29c36c0f80b09d6416716ffb6d9c760bde9c0177cc107b08ac9d95de0242cb121c3a
-MISC ChangeLog 977 SHA256 60bc7aaaeec3818fd9e6c608c8547dff7c531cbfe5ffd4cdc9805a2c47febe64 SHA512 a7995f192e474e823a95ad0f59bad0ae9a2f6163273d8913b3b3eb4f7b1d3c70c77ce61e73fbeb1880dada4ea9e20163e2896feedaa81bb10b1d74d90b3c0f4d WHIRLPOOL c63c8a81e17df263f6754d4c5f0db18ef89b9be5598f8b38d922f15972b2f81770ec2dff5c3a5dda883c7f0d4ea15952bb9ee1bb41016067aff54b248f4f4896
+EBUILD adchpp-lan-9999.ebuild 4400 SHA256 db5ca81849c5930ba7debae95861ec174b0b8c221f1b0848ee08139360d4a9b4 SHA512 37270898671e81f64cc0733a0e92bfb3afb78950474a238450babca49d3030e4f6ce256521ebf3e77f7c761ab6eaa05e687b95fd9a287b1fef24004c02046b87 WHIRLPOOL 4483a4dcd830768b11e57cb74463968829693b1706a66d65bf62ed83521a9b42512b25291a10cad435bf723c61f1d77f541c1d1d8962584ac6391c862ebe4fc1
+MISC ChangeLog 1084 SHA256 3e80dfef4f9117d77bf811d90cd7391d2081bd47640ea40f51be46d94b3f16d0 SHA512 e18fd36ac81a6623f3360f60a4ca794263456fdcb083b8a69d454d478f1efa734994e63d9dac857973cb2db7fc1a22cd8ceae61cde25508808fd0e0780866abf WHIRLPOOL 09ba6d6413a0927bef1e49382a0a63589e6f8d3dcf7316b46277deafcd27a7f39a93fcb0d4d311f0e88f447a038ed7ca83503290a3507a6ae698188ae025593b
 MISC metadata.xml 644 SHA256 a850bd20d7c3201bc1fb65ed02167dde40a4ed8cc15d4722ac03d632a0d222aa SHA512 b9266a517faf5fa7ae627c9f9ffdac3b6e067a429b5129fe1d750ce7d8f2fb5b41aa1f663bfedd411974b17ec82f83e8a15a92b4cdfebf82fd0d9248ff2ea5fe WHIRLPOOL fec9e7f00c88b571e43739c8aebff03d97d3aedc888355005809c68ae79de60642db489b93a7470b72064ac5aa74bd0fd70897d6a54b48f64be0c9cb1b68bce9
